[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gingerbread"
authors = [
    {name = "Alethea Katherine Flowers", email = "thea@winterbloom.com"}
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg",
    "cairocffi",
    "pangocffi",
    "pangocairocffi",
    "potracecffi",
    "svgpathtools",
    "rich",
    "defusedxml",
    "cssselect2",
    "pyperclip",
    "numpy",
    "pyvips",
    "gdstk",
]
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Source = "https://github.com/wntrblm/gingerbread"
